prevent overlapping of footer and button

--- a/src/pages/resume/resume.css
+++ b/src/pages/resume/resume.css
@@ -20,3 +20,9 @@
     background: black;
 }
 
+@media screen and (min-height: 670px) {
+    .resumeContainer {
+        height: 75%;
+    }
+}
+
